--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tryghost/content-api": "^1.5.4",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
+    "@types/tryghost__content-api": "^1.3.6",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
