--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.11",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.12"
   }
 }
